--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\script\BlockBase.cs" />
      <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\PlayerMove.cs" />
  <Reference Include="UnityEngine.UI">
