修复多层block的bug

--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\script\BlockBase.cs" />
+     <Compile Include="Assets\script\BlockState.cs" />
      <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\PlayerMove.cs" />
  <Reference Include="UnityEngine.UI">
