--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
+     <None Include="Assets\level.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
