--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
      <None Include="Assets\level.txt" />
+     <None Include="Assets\levels\level.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
