Use EditorGUILayout.ObjectField  to select a level

--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -73,7 +73,9 @@
      <Compile Include="Assets\Unity\UnityTypeBindings.cs" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
+     <None Include="Assets\levels\123123.txt" />
      <None Include="Assets\levels\avs.txt" />
+     <None Include="Assets\levels\wwegds.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
