--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
      <None Include="Assets\levels\123123.txt" />
      <None Include="Assets\levels\avs.txt" />
      <None Include="Assets\levels\wwegds.txt" />
+     <None Include="Assets\levels\Level1.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
