--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -51,10 +51,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Editor\SenceUI.cs" />
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
+     <None Include="Assets\levels\level3.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
      <None Include="Assets\levels\123123.txt" />
+     <None Include="Assets\levels\level2.txt" />
      <None Include="Assets\levels\avs.txt" />
      <None Include="Assets\levels\wwegds.txt" />
      <None Include="Assets\levels\Level1.txt" />
