--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Editor\MultiMaterialEditorUtilities.cs" />
      <Compile Include="Assets\Editor\SenceUI.cs" />
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
+     <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\level3.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
