--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
      <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\level3.txt" />
+     <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
      <None Include="Assets\levels\123123.txt" />
