--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Unity\UnityTypeBindings.cs" />
      <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\level3.txt" />
+     <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
      <None Include="Assets\levels\123123.txt" />
