增加四色关卡

--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
      <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\level.txt" />
+     <None Include="Assets\levels\Level7.txt" />
      <None Include="Assets\levels\123123.txt" />
      <None Include="Assets\levels\Level5.txt" />
      <None Include="Assets\levels\level2.txt" />
