--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -82,8 +82,10 @@
      <None Include="Assets\levels\level.txt" />
      <None Include="Assets\levels\Level7.txt" />
      <None Include="Assets\levels\123123.txt" />
+     <None Include="Assets\levels\Level8.txt" />
      <None Include="Assets\levels\Level5.txt" />
      <None Include="Assets\levels\level2.txt" />
+     <None Include="Assets\levels\Level9.txt" />
      <None Include="Assets\levels\avs.txt" />
      <None Include="Assets\levels\wwegds.txt" />
      <None Include="Assets\levels\Level1.txt" />
