--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\script\UnityLitJson-Example\JsonExample.cs" />
      <Compile Include="Assets\Unity\UnityTypeBindings.cs" />
      <None Include="Assets\levels\Level4.txt" />
+     <None Include="Assets\levels\Level10-4color.txt" />
      <None Include="Assets\levels\Level3.txt" />
      <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
