--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -61,6 +61,7 @@
      <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\Level10-4color.txt" />
      <None Include="Assets\levels\Level3.txt" />
+     <None Include="Assets\levels\Leveltest.txt" />
      <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\Level7.txt" />
