--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
      <Compile Include="Assets\Platform.cs" />
      <Compile Include="Assets\script\BlockBase.cs" />
      <Compile Include="Assets\script\BlockState.cs" />
+     <Compile Include="Assets\script\Elements.cs" />
      <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\LevelSelector.cs" />
      <Compile Include="Assets\script\MaterialTextureSettings.cs" />
@@ -79,6 +80,7 @@
      <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\Level10-4color.txt" />
      <None Include="Assets\levels\Level3.txt" />
+     <None Include="Assets\levels\Leveltest.txt" />
      <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
      <None Include="Assets\levels\Level7.txt" />
