add treasure level Add vscode plug

--- a/BlockDisappear/Assembly-CSharp-Editor.csproj
+++ b/BlockDisappear/Assembly-CSharp-Editor.csproj
@@ -58,9 +58,11 @@
      <Compile Include="Assets\Editor\MultiMaterialEditorUtilities.cs" />
      <Compile Include="Assets\Editor\SenceUI.cs" />
      <Compile Include="Assets\script\editor\LevelEditor.cs" />
+     <Compile Include="Assets\VSCode\Plugins\Editor\VSCode.cs" />
      <None Include="Assets\levels\Level4.txt" />
      <None Include="Assets\levels\Level10-4color.txt" />
      <None Include="Assets\levels\Level3.txt" />
+     <None Include="Assets\levels\Level-t2.txt" />
      <None Include="Assets\levels\Leveltest.txt" />
      <None Include="Assets\levels\Level6.txt" />
      <None Include="Assets\level.txt" />
