--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -77,21 +77,25 @@
      <Compile Include="Assets\script\PlayerMove.cs" />
      <Compile Include="Assets\script\UnityLitJson-Example\JsonExample.cs" />
      <Compile Include="Assets\Unity\UnityTypeBindings.cs" />
-     <None Include="Assets\levels\Level4.txt" />
-     <None Include="Assets\levels\Level10-4color.txt" />
-     <None Include="Assets\levels\Level3.txt" />
-     <None Include="Assets\levels\Level-t2.txt" />
-     <None Include="Assets\levels\Leveltest.txt" />
-     <None Include="Assets\levels\Level6.txt" />
+     <None Include="Assets\Resources\levels\Level-t4.txt" />
+     <None Include="Assets\Resources\levels\Level2.txt" />
+     <None Include="Assets\Resources\levels\Level3.txt" />
+     <None Include="Assets\Resources\levels\Level-t1.txt" />
+     <None Include="Assets\Resources\levels\Level-e1.txt" />
      <None Include="Assets\level.txt" />
-     <None Include="Assets\levels\Level7.txt" />
-     <None Include="Assets\levels\Level8.txt" />
-     <None Include="Assets\levels\Level5.txt" />
-     <None Include="Assets\levels\Level2.txt" />
-     <None Include="Assets\levels\Level9.txt" />
-     <None Include="Assets\levels\Level-t1.txt" />
-     <None Include="Assets\levels\Level1.txt" />
-     <None Include="Assets\levels\Level-treasure.txt" />
+     <None Include="Assets\Resources\levels\Level-t3.txt" />
+     <None Include="Assets\Resources\levels\Level-treasure.txt" />
+     <None Include="Assets\Resources\levels\Level1.txt" />
+     <None Include="Assets\Resources\levels\Level9.txt" />
+     <None Include="Assets\Resources\levels\Level4.txt" />
+     <None Include="Assets\Resources\levels\Level5.txt" />
+     <None Include="Assets\Resources\levels\Level6.txt" />
+     <None Include="Assets\Resources\levels\Leveltest.txt" />
+     <None Include="Assets\Resources\levels\Level10-4color.txt" />
+     <None Include="Assets\Resources\levels\Level8.txt" />
+     <None Include="Assets\Resources\levels\Level-t2.txt" />
+     <None Include="Assets\Resources\levels\Level7.txt" />
+     <None Include="Assets\Resources\levels\Level-a1.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
