--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -69,12 +69,18 @@
      <Compile Include="Assets\script\BlockState.cs" />
      <Compile Include="Assets\script\Elements.cs" />
      <Compile Include="Assets\script\GameManager.cs" />
+     <Compile Include="Assets\script\Level.cs" />
+     <Compile Include="Assets\script\LevelController.cs" />
+     <Compile Include="Assets\script\LevelDataInfo.cs" />
+     <Compile Include="Assets\script\LevelPopup.cs" />
      <Compile Include="Assets\script\LevelSelector.cs" />
      <Compile Include="Assets\script\MaterialTextureSettings.cs" />
      <Compile Include="Assets\script\MultiMaterial.cs" />
      <Compile Include="Assets\script\MultiMaterialData.cs" />
      <Compile Include="Assets\script\PlaneUI.cs" />
      <Compile Include="Assets\script\PlayerMove.cs" />
+     <Compile Include="Assets\script\UILevel.cs" />
+     <Compile Include="Assets\script\UILevelSelect.cs" />
      <Compile Include="Assets\script\UnityLitJson-Example\JsonExample.cs" />
      <Compile Include="Assets\Unity\UnityTypeBindings.cs" />
      <None Include="Assets\Resources\levels\Level-t4.txt" />
