Add levelconfig and load level config

--- a/BlockDisappear/Assembly-CSharp.csproj
+++ b/BlockDisappear/Assembly-CSharp.csproj
@@ -87,6 +87,7 @@
      <None Include="Assets\Resources\levels\Level-c2-2.txt" />
      <None Include="Assets\Resources\levels\Level2.txt" />
      <None Include="Assets\Resources\levels\Level3.txt" />
+     <None Include="Assets\Resources\levels\Level-c3-2-9022.txt" />
      <None Include="Assets\Resources\levels\Level-t1.txt" />
      <None Include="Assets\Resources\levels\Level-e1.txt" />
      <None Include="Assets\Resources\levels\Level-a3.txt" />
