--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -62,5 +62,41 @@
   "16": {
     "ID": 16, 
     "Name": "Level7"
+  }, 
+  "17": {
+    "ID": 17, 
+    "Name": "Level-c4-3.5-1006"
+  }, 
+  "18": {
+    "ID": 18, 
+    "Name": "Level-c4-3.5-1006"
+  }, 
+  "19": {
+    "ID": 19, 
+    "Name": "Level8"
+  }, 
+  "20": {
+    "ID": 20, 
+    "Name": "Level-c4-4.5-1006"
+  }, 
+  "21": {
+    "ID": 21, 
+    "Name": "Level-ct3-2.5-1007"
+  }, 
+  "22": {
+    "ID": 22, 
+    "Name": "Level-ct3-2-1007"
+  }, 
+  "23": {
+    "ID": 23, 
+    "Name": "Level-t1"
+  }, 
+  "24": {
+    "ID": 24, 
+    "Name": "Level-treasure"
+  }, 
+  "25": {
+    "ID": 25, 
+    "Name": "Level-t3"
   }
 }
