--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -98,5 +98,25 @@
   "25": {
     "ID": 25, 
     "Name": "Level-t3"
+  }, 
+  "26": {
+    "ID": 26, 
+    "Name": "Level-ct4-4-1007"
+  }, 
+  "27": {
+    "ID": 27, 
+    "Name": "Level-ct4-3-1013-2"
+  }, 
+  "28": {
+    "ID": 28, 
+    "Name": "Level-ct4-4-1122"
+  }, 
+  "29": {
+    "ID": 29, 
+    "Name": "Level-ct4a-3.5-1125"
+  }, 
+  "30": {
+    "ID": 30, 
+    "Name": "Level-ct4a-5-1125"
   }
 }
