--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -1,126 +1,134 @@
 {
   "1": {
     "ID": 1, 
-    "Name": "Level-a1"
+    "Name": "Level-c1-t0-1216"
   }, 
   "2": {
     "ID": 2, 
-    "Name": "Level-a3"
+    "Name": "Level-c1-t1-1216"
   }, 
   "3": {
     "ID": 3, 
-    "Name": "Level-a2"
+    "Name": "Level-c1-t2-1216"
   }, 
   "4": {
     "ID": 4, 
-    "Name": "Level-c2-2-0920"
+    "Name": "Level-a1"
   }, 
   "5": {
     "ID": 5, 
-    "Name": "Level-c2-2"
+    "Name": "Level-a2"
   }, 
   "6": {
     "ID": 6, 
-    "Name": "Level4"
+    "Name": "Level-c2-2-0920"
   }, 
   "7": {
     "ID": 7, 
-    "Name": "Level-e1"
+    "Name": "Level-c2-2"
   }, 
   "8": {
     "ID": 8, 
-    "Name": "Level5"
+    "Name": "Level4"
   }, 
   "9": {
     "ID": 9, 
-    "Name": "Level6"
+    "Name": "Level-e1"
   }, 
   "10": {
     "ID": 10, 
-    "Name": "Level-ct3-2.5-1007"
+    "Name": "Level5"
   }, 
   "11": {
     "ID": 11, 
-    "Name": "Level-ct3-2-1007"
+    "Name": "Level6"
   }, 
   "12": {
     "ID": 12, 
-    "Name": "Level-t1"
+    "Name": "Level-ct3-2.5-1007"
   }, 
   "13": {
     "ID": 13, 
-    "Name": "Level-treasure"
+    "Name": "Level-ct3-2-1007"
   }, 
   "14": {
     "ID": 14, 
-    "Name": "Level2"
+    "Name": "Level-t1"
   }, 
   "15": {
     "ID": 15, 
-    "Name": "Level-c3-3-0920"
+    "Name": "Level-treasure"
   }, 
   "16": {
     "ID": 16, 
-    "Name": "Level7"
+    "Name": "Level2"
   }, 
   "17": {
     "ID": 17, 
-    "Name": "Level-c4-3.5-1006"
+    "Name": "Level-c3-3-0920"
   }, 
   "18": {
     "ID": 18, 
-    "Name": "Level-c3-3-0922"
+    "Name": "Level7"
   }, 
   "19": {
     "ID": 19, 
-    "Name": "Level-c3-2-0922"
+    "Name": "Level-c4-3.5-1006"
   }, 
   "20": {
     "ID": 20, 
-    "Name": "Level-c3-4-0920"
+    "Name": "Level-c3-3-0922"
   }, 
   "21": {
     "ID": 21, 
-    "Name": "Level-ct4-3-1013-2"
+    "Name": "Level-c3-2-0922"
   }, 
   "22": {
     "ID": 22, 
-    "Name": "Level-t3"
+    "Name": "Level-c3-4-0920"
   }, 
   "23": {
     "ID": 23, 
-    "Name": "Level-ct4-4-1007"
+    "Name": "Level-ct4-3-1013-2"
   }, 
-  "24": { 
+  "24": {
     "ID": 24, 
-    "Name": "Level3"
+    "Name": "Level-t3"
   }, 
   "25": {
     "ID": 25, 
-    "Name": "Level-ct4a-4-1201"
+    "Name": "Level-ct4-4-1007"
   }, 
   "26": {
     "ID": 26, 
-    "Name": "Level-ct4a-3.5-1125"
+    "Name": "Level3"
   }, 
   "27": {
     "ID": 27, 
-    "Name": "Level-ct4a-5-1125"
+    "Name": "Level-ct4a-4-1201"
   }, 
   "28": {
     "ID": 28, 
-    "Name": "Level-ct4a-4-1201-2"
+    "Name": "Level-ct4a-3.5-1125"
   }, 
   "29": {
     "ID": 29, 
-    "Name": "Level8"
+    "Name": "Level-ct4a-5-1125"
   }, 
   "30": {
     "ID": 30, 
-    "Name": "Level-c4-4.5-1006"
+    "Name": "Level-ct4a-4-1201-2"
   }, 
   "31": {
     "ID": 31, 
+    "Name": "Level8"
+  }, 
+  "32": {
+    "ID": 32, 
+    "Name": "Level-c4-4.5-1006"
+  }, 
+  "33": {
+    "ID": 33, 
     "Name": "Level-ct4-4-1122"
   }
 }
