--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -37,98 +37,110 @@
   }, 
   "10": {
     "ID": 10, 
-    "Name": "Level5"
+    "Name": "Level-c2-t10-1216"
   }, 
   "11": {
     "ID": 11, 
-    "Name": "Level6"
+    "Name": "Level-c2-2-1216"
   }, 
   "12": {
     "ID": 12, 
-    "Name": "Level-ct3-2.5-1007"
+    "Name": "Level5"
   }, 
   "13": {
     "ID": 13, 
-    "Name": "Level-ct3-2-1007"
+    "Name": "Level6"
   }, 
   "14": {
     "ID": 14, 
-    "Name": "Level-t1"
+    "Name": "Level-ct3-2.5-1007"
   }, 
   "15": {
     "ID": 15, 
-    "Name": "Level-treasure"
+    "Name": "Level-ct3-2-1007"
   }, 
   "16": {
     "ID": 16, 
-    "Name": "Level2"
+    "Name": "Level-t1"
   }, 
   "17": {
     "ID": 17, 
-    "Name": "Level-c3-3-0920"
+    "Name": "Level-treasure"
   }, 
   "18": {
     "ID": 18, 
-    "Name": "Level7"
+    "Name": "Level2"
   }, 
   "19": {
     "ID": 19, 
-    "Name": "Level-c4-3.5-1006"
+    "Name": "Level-c3-2-1216"
   }, 
   "20": {
     "ID": 20, 
-    "Name": "Level-c3-3-0922"
+    "Name": "Level-c3-3-0920"
   }, 
   "21": {
     "ID": 21, 
-    "Name": "Level-c3-2-0922"
+    "Name": "Level7"
   }, 
   "22": {
     "ID": 22, 
-    "Name": "Level-c3-4-0920"
+    "Name": "Level-c4-3.5-1006"
   }, 
   "23": {
     "ID": 23, 
-    "Name": "Level-ct4-3-1013-2"
+    "Name": "Level-c3-3-0922"
   }, 
   "24": {
     "ID": 24, 
-    "Name": "Level-t3"
+    "Name": "Level-c3-2-0922"
   }, 
   "25": {
     "ID": 25, 
-    "Name": "Level-ct4-4-1007"
+    "Name": "Level-c3-4-0920"
   }, 
   "26": {
     "ID": 26, 
-    "Name": "Level3"
+    "Name": "Level-ct4-3-1013-2"
   }, 
   "27": {
     "ID": 27, 
-    "Name": "Level-ct4a-4-1201"
+    "Name": "Level-t3"
   }, 
   "28": {
     "ID": 28, 
-    "Name": "Level-ct4a-3.5-1125"
+    "Name": "Level-ct4-4-1007"
   }, 
   "29": {
     "ID": 29, 
-    "Name": "Level-ct4a-5-1125"
+    "Name": "Level3"
   }, 
   "30": {
     "ID": 30, 
-    "Name": "Level-ct4a-4-1201-2"
+    "Name": "Level-ct4a-4-1201"
   }, 
   "31": {
     "ID": 31, 
-    "Name": "Level8"
+    "Name": "Level-ct4a-3.5-1125"
   }, 
   "32": {
     "ID": 32, 
-    "Name": "Level-c4-4.5-1006"
+    "Name": "Level-ct4a-5-1125"
   }, 
   "33": {
     "ID": 33, 
+    "Name": "Level-ct4a-4-1201-2"
+  }, 
+  "34": {
+    "ID": 34, 
+    "Name": "Level8"
+  }, 
+  "35": {
+    "ID": 35, 
+    "Name": "Level-c4-4.5-1006"
+  }, 
+  "36": {
+    "ID": 36, 
     "Name": "Level-ct4-4-1122"
   }
 }
