Updated level config

--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -142,5 +142,57 @@
   "36": {
     "ID": 36, 
     "Name": "Level-ct4-4-1122"
+  }, 
+  "37": {
+    "ID": 37, 
+    "Name": "level-m1"
+  }, 
+  "38": {
+    "ID": 38, 
+    "Name": "level-m2"
+  }, 
+  "39": {
+    "ID": 39, 
+    "Name": "level-m3"
+  }, 
+  "40": {
+    "ID": 40, 
+    "Name": "level-m4"
+  }, 
+  "41": {
+    "ID": 41, 
+    "Name": "level-m5"
+  }, 
+  "42": {
+    "ID": 42, 
+    "Name": "level-m6"
+  }, 
+  "43": {
+    "ID": 43, 
+    "Name": "level-m7"
+  }, 
+  "44": {
+    "ID": 44, 
+    "Name": "level-m8"
+  }, 
+  "45": {
+    "ID": 45, 
+    "Name": "level-m9"
+  }, 
+  "46": {
+    "ID": 46, 
+    "Name": "level-m10"
+  }, 
+  "47": {
+    "ID": 47, 
+    "Name": "level-m11"
+  }, 
+  "48": {
+    "ID": 48, 
+    "Name": "level-m12"
+  }, 
+  "49": {
+    "ID": 49, 
+    "Name": "level-m13"
   }
 }
