--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ BlockDisappear/Library/ShaderCache/
 /BlockDisappear/Library/metadata
 /BlockDisappear/Temp
 /BlockDisappear/build
+/BlockDisappear/obj/Debug
