Update level and config

--- a/BlockDisappear/Assets/Resources/levelconfig.json
+++ b/BlockDisappear/Assets/Resources/levelconfig.json
@@ -194,5 +194,49 @@
   "49": {
     "ID": 49, 
     "Name": "level-m13"
+  }, 
+  "50": {
+    "ID": 50, 
+    "Name": "Level_move-a0"
+  }, 
+  "51": {
+    "ID": 51, 
+    "Name": "Level_move-a3"
+  }, 
+  "52": {
+    "ID": 52, 
+    "Name": "Level_move-a1"
+  }, 
+  "53": {
+    "ID": 53, 
+    "Name": "Level_move-a2"
+  }, 
+  "54": {
+    "ID": 54, 
+    "Name": "Level_move-a4"
+  }, 
+  "55": {
+    "ID": 55, 
+    "Name": "Level_move-a5"
+  }, 
+  "56": {
+    "ID": 56, 
+    "Name": "Level_move-a6"
+  }, 
+  "57": {
+    "ID": 57, 
+    "Name": "Level_move-a7"
+  }, 
+  "58": {
+    "ID": 58, 
+    "Name": "Level_move-a8"
+  }, 
+  "59": {
+    "ID": 59, 
+    "Name": "Level_move-a9"
+  }, 
+  "60": {
+    "ID": 60, 
+    "Name": "Le_move-a10"
   }
 }
